# prompt-Engineering

./: pyproject.toml
prompt-ui/: prompt-ui.py  prompt_generator.py  template.json
prompt-ui/chat-bot/: chat_message_placeholder.py  chat_propmt_template.py  chatbot.py  messages.py
