[project]
name = "prompt-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.3.2",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "langchain>=1.0.2",
    "langchain-anthropic>=1.0.0",
    "langchain-core>=1.0.1",
    "langchain-google-genai>=0.0.1",
    "langchain-huggingface>=1.0.0",
    "langchain-openai>=1.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "openai>=2.6.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]
